(data_only_dirs libpg_query)

(rule
 (deps
  (source_tree libpg_query))
 (targets libpg_query.a)
 (action
  (no-infer
   (progn
    (chdir
     libpg_query
     (run %{make} build))
    (copy libpg_query/libpg_query.a libpg_query.a)))))

(library
 (name pg_query)
 (public_name pg_query)
 (modes native)
 (libraries ctypes ctypes-foreign)
 (preprocess
  (pps ppx_deriving.show))
 (foreign_archives pg_query))
